[package]
name = "weeb_3"
version = "0.0.0"
edition = "2021"
license = "MIT"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true

[dependencies]
anyhow = { git = "https://github.com/dtolnay/anyhow.git" }
rand = "0.8"
bytes = { git = "https://github.com/tokio-rs/bytes.git" }
prost = { git = "https://github.com/tokio-rs/prost.git" }
prost-types = { git = "https://github.com/tokio-rs/prost.git" }
serde = { git = "https://github.com/serde-rs/serde.git", features = ["derive"] }
futures = { git = "https://github.com/rust-lang/futures-rs.git" }
tracing = { git = "https://github.com/tokio-rs/tracing.git" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing.git" , features = ["env-filter"] }

[build-dependencies]
prost-build = { git = "https://github.com/tokio-rs/prost.git" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git" }
rust-embed = { git = "https://github.com/pyrossh/rust-embed.git", features = ["include-exclude", "interpolate-folder-path"] }
tokio = { version = "1.38.0", default-features = false, features = ["macros", "net", "rt", "signal", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
tower-http = { git = "https://github.com/tower-rs/tower-http.git", features = ["cors"] }
mime_guess = { git = "https://github.com/abonander/mime_guess.git" }
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", features = [ "ecdsa", "ed25519", "macros", "ping", "tokio"] }
libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p.git",  features = [ "tokio"] }
libp2p-tcp = { git = "https://github.com/libp2p/rust-libp2p.git",  features = ["tokio"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { git = "https://github.com/rustwasm/console_error_panic_hook.git" }
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", features = [ "ecdsa", "secp256k1", "autonat",  "noise", "yamux", "identify", "ed25519", "macros", "ping", "tokio", "wasm-bindgen"] }
libp2p-webrtc-websys = { git = "https://github.com/libp2p/rust-libp2p.git" }
libp2p-stream = { git = "https://github.com/libp2p/rust-libp2p.git" }
tracing-wasm = { git = "https://github.com/old-storyai/tracing-wasm.git" }
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.71", features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'MessageEvent',
  'Node',
  'SharedWorker',
  'Response',
  'Window',
  'Worker',
] }
tokio = { version = "1.38.0", default-features = false, features = ["sync", "macros", "io-util", "rt", "time"] }
alloy = { git = "https://github.com/alloy-rs/alloy.git", features = [
    "k256",
    "network",
    "signer-local",
] }
byteorder = { git = "https://github.com/BurntSushi/byteorder" }