[package]
name = "weeb_3"
version = "0.0.0"
edition = "2021"
license = "MIT"

[package.metadata.release]
release = false

[[bin]]
name = "weebery"           # The name of the target.
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true

[dependencies]
anyhow = { git = "https://github.com/dtolnay/anyhow.git" }
rand = "0.8"
prost = { git = "https://github.com/tokio-rs/prost.git" }
serde = { git = "https://github.com/serde-rs/serde.git", features = ["derive"] }
serde_json = { git = "https://github.com/serde-rs/json.git" }

[build-dependencies]
prost-build = { git = "https://github.com/tokio-rs/prost.git" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git" }
rust-embed = { git = "https://github.com/pyrossh/rust-embed.git", features = ["include-exclude", "interpolate-folder-path"] }
tokio = { version = "1.38.0", default-features = false, features = ["macros", "net", "rt", "signal", "rt-multi-thread"] }
tower-http = { git = "https://github.com/tower-rs/tower-http.git", features = ["cors"] }
mime_guess = { git = "https://github.com/abonander/mime_guess.git" }
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", features = [ "ecdsa", "ed25519", "macros", "ping", "tokio"] }
libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p.git",  features = [ "tokio"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy.git", features = [
    "k256",
    "signer-local",
] }
async-std = { git = "https://github.com/async-rs/async-std.git" }
console_error_panic_hook = { git = "https://github.com/rustwasm/console_error_panic_hook.git" }
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", features = [ 
"autonat", 
"dcutr", 
"ecdsa", 
"identify", 
"macros", 
"noise", 
"ping",
"secp256k1", 
"wasm-bindgen", 
"websocket-websys",
"yamux" 
] }
libp2p-stream = { git = "https://github.com/libp2p/rust-libp2p.git" }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.42"
js-sys = { version = "0.3.72" }
web-sys = { version = "0.3.72", features = [
  'console',
  'Blob',
  'BlobPropertyBag',
  'Cache',
  'Document',
  'Element',
  'EventListener',
  'MessagePort',
  'HtmlButtonElement',
  'HtmlParagraphElement',
  'HtmlElement',
  'HtmlInputElement',
  'MessageEvent',
  'Node',
  'ServiceWorker',
  'SharedWorker',
  'Response',
  'Url',
  'Window',
  'Worker',
  'WorkerOptions',
  'WorkerType',
] }
byteorder = { git = "https://github.com/BurntSushi/byteorder" }
num = { git = "https://github.com/rust-num/num.git" }
hex = { git = "https://github.com/KokaKiwi/rust-hex.git" }
#tracing-wasm = { git = "https://github.com/old-storyai/tracing-wasm.git" }

