[package]
name = "weeb_3"
version = "0.0.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "weebery"           # The name of the target.
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { git = "https://github.com/dtolnay/anyhow.git" }
rand = "0.8"
prost = { git = "https://github.com/tokio-rs/prost.git" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { git = "https://github.com/serde-rs/json.git" }
getrandom = { version = "0.3.3", features = ["wasm_js"] }


[build-dependencies]
prost-build = { git = "https://github.com/tokio-rs/prost.git" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git" }
axum-server = { git = "https://github.com/programatik29/axum-server.git", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring","logging","tls12"]}
rust-embed = { version = "8.7.1", features = ["include-exclude", "interpolate-folder-path"] }
tokio = { version = "1.38.0", default-features = false, features = ["macros", "net", "rt", "signal", "rt-multi-thread"] }
tower-http = { git = "https://github.com/tower-rs/tower-http.git", features = ["cors"] }
mime_guess = { git = "https://github.com/abonander/mime_guess.git" }
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", features = [ "ecdsa", "ed25519", "macros", "ping", "tokio"] }
libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p.git",  features = [ "tokio"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs.git" }
alloy = { git = "https://github.com/alloy-rs/alloy.git", features = [
    "k256",
    "network",
    "signer-local",
    "wasm-bindgen",
] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy.git" }
async-std = { git = "https://github.com/async-rs/async-std.git" }
#console_error_panic_hook = { git = "https://github.com/rustwasm/console_error_panic_hook.git" }
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", features = [ 
"autonat",
"dcutr",
"ecdsa",
"identify", 
"macros",
"noise",
"ping", 
"secp256k1", 
"wasm-bindgen", 
"websocket-websys",
"yamux",
] }
libp2p-stream = { git = "https://github.com/libp2p/rust-libp2p.git" }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = { version = "0.3.77" }
web-sys = { version = "0.3.77", features = [
  'console',
  'Blob',
  'BlobPropertyBag',
  'Cache',
  'CacheStorage',
  'Document',
  'Element',
  'EventListener',
  'File',
  'FileList',
  'FilePropertyBag',
  'FileReader',
  'Headers',
  'History',
  'HtmlButtonElement',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlSpanElement',
  'HtmlParagraphElement',
  'HtmlSelectElement',
  'Location',
  'MessagePort',
  'Navigator',
  'Node',
  'ServiceWorker',
  'ServiceWorkerContainer',
  'ServiceWorkerRegistration',
  'ReadableStream',
  'Request',
  'RequestCache',
  'RequestMode',
  'RequestCredentials',
  'RequestInit',
  'Response',
  'ResponseType',
  'ResponseInit',
  'Url',
  'Window',
] }
byteorder = { git = "https://github.com/BurntSushi/byteorder" }
num = { git = "https://github.com/rust-num/num.git" }
hex = { git = "https://github.com/KokaKiwi/rust-hex.git" }
#tracing-wasm = { git = "https://github.com/old-storyai/tracing-wasm.git" }
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", default-features = false, features = ["http-rustls-tls", "wasm", "eip-1193"] }
tar = { git = "https://github.com/alexcrichton/tar-rs.git" }
mime_guess = { git = "https://github.com/abonander/mime_guess.git" }
indexed_db_futures = { git = "https://github.com/Alorel/rust-indexed-db.git", features = ["serde", "indices", "async-upgrade"] }
base64 = "0.22.1"